feat: 添加商品列表页面

--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     "pages/pay/index"
   ],
   "window": {
-    "backgroundTextStyle": "light",
+    "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#d81e06",
     "navigationBarTitleText": "商城",
     "navigationBarTextStyle": "white"
