--- a/project.config.json
+++ b/project.config.json
@@ -50,6 +50,14 @@
 					"id": -1,
 					"name": "商城分类",
 					"pathName": "pages/category/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "商品列表",
+					"pathName": "pages/goods_list/index",
+					"query": "cid=5",
 					"scene": null
 				}
 			]
