--- a/project.config.json
+++ b/project.config.json
@@ -85,6 +85,13 @@
 					"id": -1,
 					"name": "授权",
 					"pathName": "pages/auth/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "登录页面",
+					"pathName": "pages/login/index",
 					"scene": null
 				}
 			]
