--- a/project.config.json
+++ b/project.config.json
@@ -92,6 +92,13 @@
 					"id": -1,
 					"name": "登录页面",
 					"pathName": "pages/login/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "个人中心",
+					"pathName": "pages/user/index",
 					"scene": null
 				}
 			]
